feat: send all results
